namespace GetPhone.Database.Interfaces;

public abstract class Model {
    public int Id;
}